<resources>
    <!--<string name="app_name">SimpleLogin</string>-->

    <string name="activity_settings_name">Settings</string>
    <string name="activity_profiles_name">Profiles</string>
    <string name="activity_feed_detail_name">Detail</string>
    <string name="activity_create_profiles_name">Create Profile</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_profile_name">Name</string>

    <string name="ask_forgot_pass">Forgot your ID or\nPassword?</string>
    <string name="ask_sign_up">Are you sure to sign up?</string>
    <string name="ask_already_acc">Already have an account?</string>
    <string name="action_create">Create</string>

    <string name="action_login">Login</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_get_started">Get started</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_into_facebook">Facebook</string>
    <string name="action_ok">OK</string>
    <string name="action_cancel">Cancel</string>

    <string name="description_close_image">Close</string>
    <string name="description_logo_image">Fox logo</string>
    <string name="description_account_image">Account Image</string>
    <string name="description_poster_image">Poster Image</string>
    <string name="description_sliding_menu_image">Menu</string>
    <string name="description_play_image">Play</string>
    <string name="description_facebook_icon">Facebook</string>
    <string name="description_edit_icon">Edit icon</string>
    <string name="description_profile_icon">Profile icon</string>
    <string name="description_delete_icon">Delete icon</string>
    <string name="description_add_icon">Add icon</string>

    <string name="title_welcome">Welcome to</string>
    <string name="title_introduce_app">Enjoy the best TV series, award-\nwining movies,
     the biggest live\nsporting events and more.</string>
    <string name="title_submit_your_details">By submitting your details, you agree to\nFOX+</string>
    <string name="title_screen_main">Main</string>
    <string name="title_plus">\u0020and\u0020</string>
    <string name="title_privacy_policy">Privacy Policy</string>
    <string name="title_view_terms">Terms of Use</string>
    <string name="title_feed_name">Title:</string>
    <string name="title_description">Description:</string>
    <string name="title_header_feed_dialog">Detail</string>
    <string name="title_setting_language">Language</string>
    <string name="title_dialog_language">Choose Language</string>
    <string name="title_settings">Settings</string>
    <string name="title_delete_profile_dialog">Delete Profile</string>

    <string name="error_empty_field">You must enter %1$s</string>
    <string name="error_invalid_field">%1$s is invalid</string>
    <string name="error_create_user">Create user account unsuccessfully</string>
    <string name="error_login_user">Login user account unsuccessfully</string>
    <string name="error_unknown">Unknown error</string>
    <string name="error_refresh_data">Error when refreshing</string>
    <string name="error_open_file">Error when opening file</string>
    <string name="error_empty_file">Empty feed list file</string>
    <string name="error_implement_main_activity_listener">\u0020must implement MainActivityListener</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="fox_notification_title">Fox notification</string>

    <string name="facebook_app_id">927523754081158</string>
    <string name="fb_login_protocol_scheme">fb927523754081158</string>
    <string name="error_login_facebook">Error when login with facebook</string>
    <string name="cancel_login_facebook">Cancel login with facebook</string>
    <string name="request_access_email">You must allow app to access your email</string>

    <!-- Delete dialog -->
    <string name="confirm_delete_profile">Are you sure you want to delete profiles?</string>
    <string name="error_delete_profile">Error when deleting profile.</string>
    <string name="error_add_profile">Error when adding profile</string>
    <string name="success_delete_profile">Delete profiles successfully</string>
    <string name="success_add_profile">Create profile successfully</string>
    <string name="title_menu_item_delete_profile">Delete</string>
    <string name="error_delete_all_profile">Can not delete all profile</string>
    <string name="error_choose_profile_delete">Choose at least 1 profile you want to delete</string>

    <string-array name="language_name_array">
        <item>English</item>
        <item>中文</item>
        <item>简体中文</item>
    </string-array>

    <string-array name="language_code_array">
        <item>en</item>
        <item>zh-hant</item>
        <item>zh-hans</item>
    </string-array>
</resources>
