<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_common_screen_bg"
    android:orientation="vertical"
    android:padding="@dimen/activity_padding"
    tools:context="com.example.thuyhien.simplelogin.ui.activity.SignInActivity">

    <LinearLayout
        style="@style/FormLogInTheme"
        android:layout_marginBottom="@dimen/form_login_vertical_margin"
        android:layout_marginLeft="@dimen/form_login_horizontal_margin"
        android:layout_marginRight="@dimen/form_login_horizontal_margin"
        android:layout_marginTop="@dimen/form_login_vertical_margin">

        <ImageView
            android:id="@+id/image_logo"
            style="@style/LogoImageTheme"
            android:layout_gravity="center"
            android:layout_margin="@dimen/logo_vertical_margin" />

        <EditText
            android:id="@+id/edit_email"
            style="@style/LogInEditTextTheme"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/white"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/edit_password"
            style="@style/LogInEditTextTheme"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/white"
            android:hint="@string/hint_password"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/text_forgot_password"
            style="@style/LogInTextViewTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/title_ask_forgot_vertical_padding"
            android:text="@string/ask_forgot_pass"
            android:textSize="@dimen/title_ask_forgot_text_size" />

        <Button
            android:id="@+id/button_login"
            style="@style/CommonButtonTheme"
            android:layout_gravity="center"
            android:text="@string/action_login" />

        <Button
            android:id="@+id/button_login_facebook"
            style="@style/FacebookButtonTheme"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/button_facebook_vertical_spacing"
            android:drawableLeft="@drawable/com_facebook_button_icon"
            android:text="@string/action_sign_into_facebook"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/button_close"
        style="@style/CloseButtonTheme"
        android:layout_gravity="end" />

</LinearLayout>
