<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_common_screen_bg"
    android:padding="@dimen/activity_padding"
    tools:context="com.example.thuyhien.simplelogin.activity.SignInActivity">

    <ImageButton
        android:id="@+id/button_close"
        style="@style/CloseButtonTheme" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/form_login_vertical_margin"
        android:layout_marginLeft="@dimen/form_login_horizontal_margin"
        android:layout_marginRight="@dimen/form_login_horizontal_margin"
        android:layout_marginTop="@dimen/form_login_vertical_margin"
        android:background="@drawable/layout_login_bg"
        android:orientation="vertical"
        android:padding="@dimen/form_login_padding">

        <ImageView
            android:id="@+id/image_logo"
            style="@style/LogoImageTheme"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="2" />

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@android:color/white"
            android:gravity="center"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@android:color/white"
            android:gravity="center"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />

        <TextView
            android:id="@+id/text_forgot_password"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/ask_forgot_pass"
            android:textColor="@android:color/white"
            android:textSize="@dimen/title_ask_forgot_text_size" />

        <Button
            android:id="@+id/button_login"
            style="@style/CommonButtonTheme" />
    </LinearLayout>
</RelativeLayout>
