<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_common_screen_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_poster_height">

            <ImageView
                android:id="@+id/image_poster"
                style="@style/PosterTheme"
                android:src="@mipmap/ic_launcher" />

            <ImageButton
                android:id="@+id/button_play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:contentDescription="@string/description_play_image"
                android:src="@mipmap/ic_play_circle_outline_black_24dp" />
        </RelativeLayout>

        <LinearLayout
            style="@style/FeedContentLayoutTheme"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    style="@style/FeedTitleTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_feed_name" />

                <TextView
                    style="@style/FeedTitleTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/text_vertical_spacing"
                    android:text="@string/title_description" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_feed_title"
                    style="@style/FeedInfoTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="abc" />

                <TextView
                    android:id="@+id/text_description"
                    style="@style/FeedInfoTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/text_vertical_spacing"
                    android:ellipsize="end"
                    android:maxLines="4"
                    android:text="abc" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
